# Aurora

./: .claudeignore  .gitignore  .graphifyignore  CLAUDE.md  DESIGN_QA.md  GATE0_REVIEW.md  HANDOFF.md  HERMES_SESSION_HANDOFF.md  ONBOARDING.md  PRODUCT.md  README.md  dev.ps1  features.json  package.json
.claude/: settings.local.json
.playwright-mcp/: page-2026-05-25T17-57-30-029Z.yml  page-2026-05-25T18-13-45-274Z.yml  page-2026-05-26T14-57-21-401Z.yml  page-2026-05-26T15-17-27-726Z.yml  page-2026-05-26T15-17-35-075Z.yml  page-2026-05-26T15-17-55-298Z.yml  page-2026-05-26T15-18-18-257Z.yml  page-2026-05-26T21-04-45-438Z.yml  page-2026-05-26T21-05-43-579Z.yml  page-2026-05-26T21-13-09-099Z.yml
backend/: aurora-backend.spec  backfill_colors.py  backfill_peaks_colors.py  requirements.txt  run.py  test_song_dict.py
docs/: 01-data-model.md  02-api-contract.md  03-filter-engine.md  04-file-scanner.md  05-project-structure.md  (+27 more)
rust/core/: Cargo.toml
rust/core/src/: lib.rs  models.rs  paths.rs  serializer.rs
rust/core/src/addons/: mod.rs
rust/core/src/db/: migrations.rs  mod.rs  queries.rs
rust/core/src/filter/: mod.rs
rust/core/src/scanner/: analysis.rs  color_utils.rs  db.rs  mod.rs  peaks.rs
rust/core/tests/: test_parity.rs
rust/core/tests/fixtures/: generate_fixtures.py  reference_metadata.json  test_song.flac  test_song.m4a
rust/server/: Cargo.toml
rust/server/src/: lib.rs  main.rs
rust/server/src/routes/: albums.rs  envelope.rs  filter.rs  folders.rs  mod.rs  playlists.rs  scanner.rs  songs.rs  tags.rs  watcher.rs
rust/server/tests/: golden.rs
(+252 files in other folders)
