[package]
name = "aurora_core"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
lofty = "0.22"
regex = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "vorbis", "wav", "aac", "isomp4", "alac"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
