[package]
name = "aurora_server"
version = "0.1.0"
edition = "2024"

[dependencies]
aurora_core = { path = "../core" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
dirs = "6"
async-stream = "0.3"
rusqlite = { version = "0.35", features = ["bundled"] }

[dev-dependencies]
aurora_core = { path = "../core", features = ["test-utils"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
